--- a/team.html
+++ b/team.html
@@ -79,7 +79,7 @@
                             <p class="title is-4">Илияс Жансериков</p>
                             <p class="subtitle is-6 has-text-warning">Главный обжарщик</p>
                             <div class="content">
-                                <p>12 лет опыта в обжарке кофе. Создала более 30 уникальных купажей для нашей компании. Моя двоюродная сестра.</p>
+                                <p>12 лет опыта в обжарке кофе. Создал более 30 уникальных купажей для нашей компании. Мой двоюродный брат.</p>
                                 <p class="has-text-weight-bold">Достижения:</p>
                                 <ul>
                                     <li>Сертификат SCA Roasting Professional</li>
@@ -134,4 +134,5 @@
         </div>
     </footer>
 </body>
+
 </html>
